--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,4 +1,9 @@
 
-$primaryColor: green !default;
-$secondaryColor: orange !default;
+
+// ===================== Colors ============================
+
+$primary-color: green !default;
+$secondary-color: orange !default;
+
+// ===================== Dimensions ============================
 
