--- a/srcDemo/style/style.scss
+++ b/srcDemo/style/style.scss
@@ -1,6 +1,6 @@
 
-$primaryColor: blue;
-$secondaryColor: maroon;
+$primary-color: blue;
+$secondary-color: maroon;
 
 $dir: ltr;
 html[dir=#{$dir}] {
