--- a/srcDemo/style/style.scss
+++ b/srcDemo/style/style.scss
@@ -5,14 +5,16 @@ $secondary-color: maroon;
 $dir: ltr;
 html[dir=#{$dir}] {
   @import "../../src/style/setup";
-  @import "../../src/style/components/one";
+  @import "../../src/style/components/FormInput";
+  @import "patches";
 }
 
 
 $dir: rtl;
 html[dir=#{$dir}] {
   @import "../../src/style/setup";
-  @import "../../src/style/components/one";
+  @import "../../src/style/components/FormInput";
+  @import "patches";
 }
 
 
