--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -6,13 +6,21 @@ $warning-border-color: darkorange;
 $error-text-color: #af0000;
 $error-border-color: #af0000;
 
-$form-input-text-color: #444;
+$form-input-text-color: #333;
 $form-input-background-color: #fff;
 $form-input-border-color: #ededed;
 
 $form-input-focus-text-color: #333;
 $form-input-focus-background-color: #fff;
 $form-input-focus-border-color: #dcdcdc;
+
+$form-input-warning-text-color: $warning-text-color;
+$form-input-warning-background-color: #fff;
+$form-input-warning-border-color: $warning-border-color;
+
+$form-input-error-text-color: $error-text-color;
+$form-input-error-background-color: #fff;
+$form-input-error-border-color: $error-border-color;
 
 // ===================== Dimensions ============================
 
